[package]
name = "rust-blockchain"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.23"
hex = "0.4.3"
libp2p = {version = "0.50.0", features = ["tcp", "mdns"]}
log = "0.4.17"
once_cell = "1.16.0"
pretty_env_logger = "0.4.0"
serde = {version = "1.0.149", features = ["derive"]}
serde_json = "1.0.89"
sha2 = "0.10.6"
tokio = {version = "1.23.0", features = ["io-util", "io-std", "rt", "rt-multi-thread", "sync", "time"]}
